<resources>
    <string name="ballon1">Ballon 1</string>
    <string name="ballon2">Ballon 2</string>
    <string name="ballon3">Ballon 3</string>
    <string name="ballon4">Ballon 4</string>
    <string name="ballon5">Ballon 5</string>
    <string name="ballon6">Ballon 6</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="end">end</string>
    <string name="shoot">shoot</string>
    <string name="start">start</string>
    <string name="Resume">Resume</string>
    <string name="Stats">Stats</string>
    <string name="left">left</string>
    <string name="right">right</string>


</resources>
