<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#EEECEC"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="428dp"
        android:background="#EEECEC"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon1"
            app:srcCompat="@drawable/ballon1" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon2"
            app:srcCompat="@drawable/ballon2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon3"
            app:srcCompat="@drawable/ballon3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon4"
            app:srcCompat="@drawable/ballon4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon5"
            app:srcCompat="@drawable/ballon5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:contentDescription="@string/ballon6"
            app:srcCompat="@drawable/ballon6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="458dp"
            android:contentDescription="stickman"
            android:paddingLeft="8dp"
            android:paddingTop="215dp"
            android:paddingBottom="50dp"
            app:srcCompat="@drawable/blackman" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:background="#851A1A"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"></LinearLayout>




</LinearLayout>

